# BoidsProject2022

./: .gitignore  CMakeLists.txt  README.md  boids.cpp  boids.hpp  boids.test.cpp  graphics.cpp  graphics.hpp  main.cpp  main.hpp  stats.cpp  stats.hpp  stats.test.cpp
Instructions_typeset/: GiacominiInstructions_typeset.tex
SelbaWard/: Common.hpp  Ring.cpp  Ring.hpp
